add auth to swagger
