# golang/internal/controller/http/v1/middleware/auth.go
@@ -34,6 +34,11 @@ func (m *Middleware) CheckAccess(roles ...string) gin.HandlerFunc {
 		}
 
 		parts := strings.Split(header, " ")
+		if len(parts) < 2 {
+			dto.AbortErrMsg(ctx, bearerErr)
+			return
+		}
+
 		bearer := parts[0]
 		token := parts[1]
 
